[package]

name = "easy-plugin-plugins"
authors = ["Kyle Mayes <kyle@mayeses.com>"]

version = "0.9.1"

license = "Apache-2.0"

description = "Compiler plugins used internally by the easy-plugin crate."

repository = "https://github.com/KyleMayes/easy-plugin"

build = "build.rs"

[lib]

plugin = true

[features]

stable = ["syntex", "syntex_syntax", "synthax/stable"]

[dependencies]

synthax = "0.3.2"

syntex = { version = "0.*.0", optional = true }
syntex_syntax = { version = "0.*.0", optional = true }

clippy = { version = "0.0.*", optional = true }

[build-dependencies]

synthax = "0.3.2"
